unpackaged/main/default/objects/Tylenol_Case__c/Tylenol_Case__c.object-meta.xml
<CustomObject>
    <description>Used to store Tylenol specific fields that match one to one with LawRuler. Built to meet demands in the right time frame given by company. When more time and priority is given, these should be moved to standardized fields into the campaign case.</description>
    <label>Tylenol Case</label>
    <nameField>
        <displayFormat>TY-{000000}</displayFormat>
        <label>Tylenol Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tylenol Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>