unpackaged/main/default/objects/Tylenol_Case__c/fields/ADHD_Medication_Dosage__c.field-meta.xml
<CustomField>
    <fullName>ADHD_Medication_Dosage__c</fullName>
    <description>32.What dosage of medication is the child taking for their ADHD?</description>
    <label>ADHD Medication Dosage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>