unpackaged/main/default/objects/Tylenol_Case__c/fields/Autism_Level__c.field-meta.xml
<CustomField>
    <fullName>Autism_Level__c</fullName>
    <description>25.If applicable, what level of Autism does the child have?</description>
    <label>Autism Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>