unpackaged/main/default/objects/Tylenol_Case__c/fields/Costs_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Costs_Expenses__c</fullName>
    <description>41.Have there been any costs/expenses for tutoring; behavioral or psychological therapy?</description>
    <label>Costs/Expenses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generic_Responses</valueSetName>
    </valueSet>
</CustomField>