unpackaged/main/default/objects/Tylenol_Case__c/fields/Current_Age_of_Child__c.field-meta.xml
<CustomField>
    <fullName>Current_Age_of_Child__c</fullName>
    <description>How old is your child currently?</description>
    <label>Current Age of Child</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>