unpackaged/main/default/objects/Tylenol_Case__c/fields/Diagnosed_with_ADHD__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_with_ADHD__c</fullName>
    <description>30.Has your child been formally diagnosed with ADHD?</description>
    <label>Diagnosed with ADHD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generic_Responses</valueSetName>
    </valueSet>
</CustomField>