unpackaged/main/default/objects/Tylenol_Case__c/fields/Educational_ADHD_Scale__c.field-meta.xml
<CustomField>
    <fullName>Educational_ADHD_Scale__c</fullName>
    <description>39.On a scale of 1 to 10, to what degree is your child’s educational progress adversely affected by account of ADHD (or autism) (10 being very severe and 1 being little impact)?</description>
    <label>Educational ADHD Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generic_Responses</valueSetName>
    </valueSet>
</CustomField>