unpackaged/main/default/objects/Tylenol_Case__c/fields/Father_age_at_birth__c.field-meta.xml
<CustomField>
    <fullName>Father_age_at_birth__c</fullName>
    <description>16.How old was the father of the child when your baby was born? (If 46+ years, disqualify)</description>
    <label>Father age at birth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>