unpackaged/main/default/objects/Tylenol_Case__c/fields/Has_Behavior_Psych_issues__c.field-meta.xml
<CustomField>
    <fullName>Has_Behavior_Psych_issues__c</fullName>
    <description>34.Has the child also had other behavioral/psychological issues?</description>
    <label>Has Behavior/Psych issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generic_Responses</valueSetName>
    </valueSet>
</CustomField>