unpackaged/main/default/objects/Tylenol_Case__c/fields/Held_Back_in_School__c.field-meta.xml
<CustomField>
    <fullName>Held_Back_in_School__c</fullName>
    <description>36.Has the child ever been held back in school?</description>
    <label>Held Back in School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generic_Responses</valueSetName>
    </valueSet>
</CustomField>