unpackaged/main/default/objects/Tylenol_Case__c/fields/Impact_ADHD_Scale__c.field-meta.xml
<CustomField>
    <fullName>Impact_ADHD_Scale__c</fullName>
    <description>37.On a scale of 1 to 10, the impact of ADHD (or autism) on the child’s daily life (10 being very severe and 1 being little impact)?</description>
    <label>Impact ADHD Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generic_Responses</valueSetName>
    </valueSet>
</CustomField>