unpackaged/main/default/objects/Tylenol_Case__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to connect case object with intake</description>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Tylenol Cases</relationshipLabel>
    <relationshipName>Tylenol_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>