unpackaged/main/default/objects/Tylenol_Case__c/fields/Legal_Guardian_Relative__c.field-meta.xml
<CustomField>
    <fullName>Legal_Guardian_Relative__c</fullName>
    <description>5.Are you the legal guardian, parent or relative of a child whom has been diagnosed with ADHD or Autism after taking Tylenol?*</description>
    <label>Legal Guardian/Relative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>