unpackaged/main/default/objects/Tylenol_Case__c/fields/Medication_brand__c.field-meta.xml
<CustomField>
    <fullName>Medication_brand__c</fullName>
    <description>31.Which brand of medication is the child taking for their ADHD?</description>
    <label>ADHD Medication brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>