unpackaged/main/default/objects/Tylenol_Case__c/fields/Mother_Age_at_Birth__c.field-meta.xml
<CustomField>
    <fullName>Mother_Age_at_Birth__c</fullName>
    <description>14. How old were you when your baby was born? (If 41+ years at time of birth, disqualify)</description>
    <label>Mother Age at Birth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>