unpackaged/main/default/objects/Tylenol_Case__c/fields/Purchase_Location__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Location__c</fullName>
    <description>21.[If generic] where did you usually buy your generic Acetaminophen?</description>
    <label>Purchase Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Walmart</fullName>
            </value>
            <value>
                <fullName>Walgreens/Duane Reed</fullName>
            </value>
            <value>
                <fullName>CVS</fullName>
            </value>
            <value>
                <fullName>Rite Aid</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Other / Pharmacy</fullName>
            </value>
            <value>
                <fullName>Other / Grocery store</fullName>
            </value>
            <value>
                <fullName>Other / Convenient store</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>