unpackaged/main/default/objects/Tylenol_Case__c/fields/Relationship_to_Child__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Child__c</fullName>
    <description>6.What is your relationship with the child?*</description>
    <label>Relationship to Child</label>
    <length>255</length>
    <type>Text</type>
</CustomField>