unpackaged/main/default/objects/Tylenol_Case__c/fields/Social_ADHD_Scale__c.field-meta.xml
<CustomField>
    <fullName>Social_ADHD_Scale__c</fullName>
    <description>40.On a scale of 1 to 10, to what degree is your child’s social development adversely affected by account of ADHD (or autism) (10 being very severe and 1 being little impact)?</description>
    <label>Social ADHD Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generic_Responses</valueSetName>
    </valueSet>
</CustomField>