unpackaged/main/default/objects/Tylenol_Case__c/fields/Thriving_ADHD_Scale__c.field-meta.xml
<CustomField>
    <fullName>Thriving_ADHD_Scale__c</fullName>
    <description>38.On a scale of 1 to 10, to what degree does your child experience hardship or difficulty thriving on account of ADHD (or autism) (10 being very severe and 1 being little impact)?</description>
    <label>Thriving ADHD Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generic_Responses</valueSetName>
    </valueSet>
</CustomField>