unpackaged/main/default/objects/Tylenol_Case__c/fields/Time_Taking_ADHD_Med__c.field-meta.xml
<CustomField>
    <fullName>Time_Taking_ADHD_Med__c</fullName>
    <description>33.How long has the child been taking this medication for their ADHD?</description>
    <label>Time Taking ADHD Med</label>
    <length>255</length>
    <type>Text</type>
</CustomField>