unpackaged/main/default/objects/Tylenol_Case__c/fields/Tylenol_Strength__c.field-meta.xml
<CustomField>
    <fullName>Tylenol_Strength__c</fullName>
    <description>19.When you took Tylenol/ generic Acetaminophen, what did you normally take?</description>
    <label>Tylenol Strength</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>325mg</fullName>
            </value>
            <value>
                <fullName>650mg</fullName>
            </value>
            <value>
                <fullName>1000mg (2 Extra Strength or 4 regular strength)</fullName>
            </value>
            <value>
                <fullName>500mg (1 Extra Strength or 2 regular strength)</fullName>
            </value>
            <value>
                <fullName>250mg (1 regular strength)</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>